ApartmentConfigurationDialog fixes ReceiverConfigurationDialog now also uses the new workflow